--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
                     An UI/UX Designer
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    Proudly saying that I'm a Self-Taught UI/UX Designer who is a very specialist in UI Designs and very brilliance in UX research. Having more than 2+ years of experience, I welcome you to my 'ArtBoard'.
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
